--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,7 @@
 @import "reset";
+@import "config/colors";
 @import "functions";
 @import "about";
+@import "modules/user";
+@import "modules/flash";
+@import "_mypage.scss";
