--- a/app/assets/stylesheets/_functions.scss
+++ b/app/assets/stylesheets/_functions.scss
@@ -1,3 +1,4 @@
+// 共通（設定）-----------------------------------------------------
 $pc: 1024px; // PC
 $tab: 680px; // タブレット
 
@@ -17,31 +18,40 @@ $tab: 680px; // タブレット
   font-family: 'ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
 }
 
+// 共通（ヘッダー）-----------------------------------------------------
 .header {
   height: 80px;
   width: 100%;
-  position:fixed;
-  top:0;
-  z-index:10;
+  
   .container {
     width: 100%;
     display: flex;
     justify-content: space-between;
     background-color: #2f5167;
     color: #ffffff;
+    position:fixed;
+    top:0;
+    z-index:10;
     .header-left {
       margin-left: 30px;
       text-align: center;
       font-size: 30px;
       line-height: 80px;
       font-weight: bold;
-      // border: 1px solid black;
+      a {
+        text-decoration: none;
+        color: #ffffff;
+      }
     }
     .header-right {
       font-size: 20px;
       margin-right:30px;
       display: flex;
       justify-content: space-between;
+      &__user-name {
+        line-height: 80px;
+        margin-right: 20px;
+      }
       &__buttons-signup {
         height: 80px;
         text-align: center;
@@ -69,12 +79,25 @@ $tab: 680px; // タブレット
       &__buttons-login:hover {
         background-color:rgba(255, 255, 255, 0.15);
       }
+      &__buttons-logout {
+        height: 80px;
+        text-align: center;
+        line-height: 80px;
+        width: 140px;
+        text-decoration: none;
+        color: #ffffff;
+        background-color:rgba(255, 255, 255, 0.05);
+        transition: all 1s;
+      }
+      &__buttons-login:hover {
+        background-color:rgba(255, 255, 255, 0.15);
+      }
     }
   }
 }
 
+// 個別（トップページ）-----------------------------------------------------
 .top-image {
-  margin-top: 80px;
   height: calc(100vh - 200px);
   background-image: image-url('top-image.png');
   background-size: contain;
@@ -102,7 +125,7 @@ $tab: 680px; // タブレット
     @include tab {
       font-size: 15px;
     };
-      }
+  }
 }
 
 .btn-wrapper {
@@ -156,7 +179,6 @@ $tab: 680px; // タブレット
   height: 350px;
   width:100%;
   padding-bottom: 80px;
-  // background-color: yellow;
   .container {
     padding-left: 40px;
     padding-right: 40px;
@@ -170,8 +192,6 @@ $tab: 680px; // タブレット
       margin-top: 10px;
       width: 100%;
       height: 100%;
-      // display: flex;
-      // justify-content: space-around;
       .function {
         width: 25%;
         margin: 30px 0px 50px 0px;
@@ -253,13 +273,11 @@ $tab: 680px; // タブレット
   }
 }
 
-
-
 .footer {
   background-color: #2f5167;
   color: #fff;
-  height: 140px;
-  padding: 40px;
+  height: 100px;
+  padding: 20px;
   .footer-left{
     float: left;
     .footer-logo{
@@ -269,7 +287,61 @@ $tab: 680px; // タブレット
   .footer-right {
     float: right;
     li {
-      padding-bottom: 20px;
+      padding-bottom: 15px;
+    }
+  }
+}
+
+
+// 個別（シミュレーション紹介ページ）-----------------------------------------------------
+
+.simulation-wrapper {
+  width:100%;
+  padding-bottom: 90px;
+  .simulation-container {
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-top: 100px;
+    .simulation-heading {
+      border-bottom: 2px solid #dee7ec;
+      font-size: 20px;
+      padding-bottom: 10px;
+    }
+    .simulations{
+      // background-color: yellow;
+      margin-top: 20px;
+      padding-left: 10px;
+      padding-right: 25px;
+      .simulation-title {
+        padding-bottom: 5px;
+        margin-top: 30px;
+        &__btn {
+          text-decoration: none;
+          padding: 5px 10px 5px 10px;
+          line-height: 25px;
+          background-color :#79bee4;
+          color:#d1e3ec;
+          border-radius:10px;
+          display: inline-block;
+          width: 300px;
+          box-shadow:0 3px #6193c2;
+        }
+        &__btn:active {
+          box-shadow: none;
+          position: relative;
+          top: 3px;
+        }
+      }
+      .simulation-txt {
+        margin-left: 15px;
+        margin-top: 6px;
+        display:inline-block;
+        font-size:13px;
+        color:#b3aeb5;
+      }
+      .clear {
+        clear: left;
+      }
     }
   }
 }
