--- a/app/views/functions/index.html.haml
+++ b/app/views/functions/index.html.haml
@@ -3,8 +3,12 @@
     %div.header-left
       SimTax
     %div.header-right
-      = link_to new_user_registration_path, class: "header-right__buttons-signup" do
-        SignUp
+      - if user_signed_in?
+        %div.header-right__user-name
+          こんにちは#{current_user.name}さん
+      - else
+        = link_to new_user_registration_path, class: "header-right__buttons-signup" do
+          SignUp
       - if user_signed_in?
         = link_to  mypage_path(current_user), class: "header-right__buttons-login" do
           Mypage
@@ -16,19 +20,21 @@
   %div.top-image__message
     %h1.top-image__message--main Visualize your Tax
     %p.top-image__message--sub SimTaxは、あたなの税金を視覚化します。
-
-%div.btn-wrapper
-  %div.btn-container
-    %a.btn.signup{:href => "#"} 新規登録
-    %a.btn.facebook{:href => "#"}
-      %span.fa.fa-facebook
-      Facebook IDで登録
-    %a.btn.twitter{:href => "#"}
-      %span.fa.fa-twitter
-      Twitter IDで登録
-    %a.btn.google{:href => "#"}
-      %span.fa.fa-google
-      Googleアカウントで登録
+- if user_signed_in?
+- else
+  %div.btn-wrapper
+    %div.btn-container
+      = link_to new_user_registration_path, class: "btn signup" do
+        新規登録
+      %a.btn.facebook{:href => "#"}
+        %span.fa.fa-facebook
+        Facebook IDで登録
+      %a.btn.twitter{:href => "#"}
+        %span.fa.fa-twitter
+        Twitter IDで登録
+      %a.btn.google{:href => "#"}
+        %span.fa.fa-google
+        Googleアカウントで登録
 
 
 %div.service-wrapper
@@ -37,8 +43,8 @@
     %div.contents-functions
       %div.function
         %div.function-icon
-          %p 所得税シミュレーション
-        %p.txt-function 各項目を入力すると直ぐに納税額を知ることができ、計算の過程をグラフ化します。収入、経費や所得控除等の増減に対する納税額への影響など感度分析を行えます。また、結果をメールやラインで送信することもできます。
+          %p 各種シミュレーション
+        %p.txt-function 各項目を入力すると直ぐに納税額などを知ることができ、計算の過程をグラフ化します。収入、経費や所得控除等の増減に対する納税額への影響など感度分析を行えます。また、結果をメールやラインで送信することもできます。
         = link_to function_path(1), class: "txt-function__btn" do
           シミュレーションを行う
       %div.function
@@ -56,7 +62,7 @@
       %div.function
         %div.function-icon
           %p 税理士相談
-        %p.txt-function 所得税に関する悩みを所得税専門税理士に相談することができます。主にチャットを利用しての相談になります。（このサービスをご利用いただくためには会員登録が必要になります。）
+        %p.txt-function 所得税に関する悩みを所得税専門税理士に相談することができます。主にチャットを利用しての相談になります。（会員登録が必要になります。）
         = link_to function_path(4), class: "txt-function__btn" do
           税理士へ相談する
       %div.clear
