--- a/app/assets/stylesheets/_functions.scss
+++ b/app/assets/stylesheets/_functions.scss
@@ -250,28 +250,7 @@ $tab: 680px; // タブレット
 }
 
 
-.contact-form{
-  padding-left: 40px;
-  padding-right: 40px;
-  margin-top: 20px;
-  .section-title{
-    border-bottom: 2px solid #dee7ec;
-    font-size: 25px;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-  }
-  input, textarea {
-    width: 400px;
-    margin-top:10px;
-    margin-bottom:30px;
-    padding:20px;
-    border: 1px solid #dee7ec;
-  }
-  .contact-submit {
-    background-color :#dee7ec;
-    color:#889eab;
-  }
-}
+
 
 .footer {
   background-color: #2f5167;
@@ -288,6 +267,10 @@ $tab: 680px; // タブレット
     float: right;
     li {
       padding-bottom: 15px;
+      a {
+        text-decoration: none;
+        color: #fff;
+      }
     }
   }
 }
